manifests/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtool-api-web
  labels:
    app: VirtoolWeb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: VirtoolWeb
  template:
    metadata:
      labels:
        app: VirtoolWeb
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/virtool/virtool:15.5.0
          imagePullPolicy: Always
          name: virtool-api-web
          command: ["python", "run.py", "--no-tasks", "server"]
          ports:
            - containerPort: 9950
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 600m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          nfs:
            server: 10.109.28.120
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: VirtoolWeb
  ports:
    - name: http
      port: 80
      targetPort: 9950
