manifests/jobs_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtool-api-jobs
  labels:
    app: VirtoolApiJobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: VirtoolApiJobs
  template:
    metadata:
      labels:
        app: VirtoolApiJobs
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/virtool/virtool:14.3.1
          imagePullPolicy: Always
          name: virtool-api-jobs
          command: ["python", "run.py", "jobsAPI", "--host=0.0.0.0"]
          ports:
            - containerPort: 9950
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 600m
              memory: 1Gi
          volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        nfs:
            server: 10.109.28.120
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-api
spec:
  type: ClusterIP
  selector:
    app: VirtoolApiJobs
  ports:
    - name: http
      port: 80
      targetPort: 9950
