manifests/nfs.yaml
kind: Service
apiVersion: v1
metadata:
  name: nfs-service
spec:
  type: ClusterIP
  selector:
    role: nfs
  ports:
    # Open the ports required by the NFS server
    - name: tcp-2049
      port: 2049
      protocol: TCP
    - name: udp-111
      port: 111
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs
  labels:
    app: nfs
    role: nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs
  template:
    metadata:
      labels:
        app: nfs
    spec:
      containers:
        - name: nfs-server
          image: cpuguy83/nfs-server
          securityContext:
            privileged: true
          args:
            - /exports/virtool
          volumeMounts:
            - mountPath: /exports
              name: pv-nfs-storage

      volumes:
        - name: pv-nfs-storage
          persistentVolumeClaim:
            claimName: pvc-nfs
