manifests/openfga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfga
  labels:
    app: OpenFGA
spec:
  replicas: 1
  selector:
    matchLabels:
      app: OpenFGA
  template:
    metadata:
      labels:
        app: OpenFGA
    spec:
      containers:
        - image: openfga/openfga:v0.2.5
          imagePullPolicy: Always
          name: openfga
          command: ["./openfga", "run"]
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 600m
              memory: 400M
            requests:
              cpu: 300m
              memory: 300M
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: openfga
spec:
  type: ClusterIP
  selector:
    app: OpenFGA
  ports:
    - name: http
      port: 80
      targetPort: 8080
