manifests/task-spawner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtool-task-spawner
  labels:
    app: VirtoolTaskSpawner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: VirtoolTaskSpawner
  template:
    metadata:
      labels:
        app: VirtoolTaskSpawner
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/virtool/virtool:19.4.0
          imagePullPolicy: Always
          name: virtool-task-spawner
          command: ["python", "run.py", "tasks", "spawner"]
          ports:
          - containerPort: 9950
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 400m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-spawner
spec:
  type: ClusterIP
  selector:
    app: VirtoolTaskSpawner
  ports:
    - name: http
      port: 80
      targetPort: 9950
