manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtool-ui
  labels:
    app: VirtoolUI
spec:
  replicas: 1
  selector:
    matchLabels:
      app: VirtoolUI
  template:
    metadata:
      labels:
        app: VirtoolUI
    spec:
      containers:
        - image: ghcr.io/virtool/ui:3.6.2
          imagePullPolicy: Always
          name: virtool-ui
          command: ["node", "run.js"]
          ports:
            - containerPort: 9900
              protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 3Gi
            requests:
              cpu: 2
              memory: 3Gi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app: VirtoolUI
  ports:
    - name: http
      port: 80
      targetPort: 9900
