manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/api"
spec:
  tls:
    - hosts:
        - virtool.local
      secretName: mkcert
  rules:
    - host: virtool.local
      http:
        paths:
          - path: /(ws)
            pathType: ImplementationSpecific
            backend:
              service:
                name: virtool-api-web-service
                port:
                  number: 80
          - path: /api[/]?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: virtool-api-web-service
                port:
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: virtool-ui-service
                port:
                  number: 80
